@@ -43,7 +43,7 @@ CheckOptions:
   - key:   readability-function-cognitive-complexity.IgnoreMacros
     value: 'true'
   - key:   readability-function-cognitive-complexity.Threshold
-    value: '39'
+    value: '28'
   - key:   readability-uppercase-literal-suffix.NewSuffixes
     value: 'L;U;UL;ULL'
 WarningsAsErrors: '*'
