@@ -94,13 +94,6 @@ jalv_frontend_init(JalvFrontendArgs* const args, JalvOptions* const opts)
      &opts->generic_ui,
      "Show generic UI instead of custom plugin GUI",
      NULL},
-    {"load",
-     'l',
-     0,
-     G_OPTION_ARG_STRING,
-     &opts->load,
-     "Load state from save directory",
-     "DIR"},
     {"no-menu",
      'm',
      0,
@@ -115,13 +108,6 @@ jalv_frontend_init(JalvFrontendArgs* const args, JalvOptions* const opts)
      &opts->name,
      "JACK client name",
      "NAME"},
-    {"preset",
-     'P',
-     0,
-     G_OPTION_ARG_STRING,
-     &opts->preset,
-     "Load state from preset",
-     "URI"},
     {"print-controls",
      'p',
      0,
@@ -177,7 +163,7 @@ jalv_frontend_init(JalvFrontendArgs* const args, JalvOptions* const opts)
   const int err =
     gtk_init_with_args(args->argc,
                        args->argv,
-                       "PLUGIN_URI - Run an LV2 plugin as a Jack application",
+                       "PLUGIN_STATE - Run an LV2 plugin as a Jack application",
                        entries,
                        NULL,
                        &error);
